# simple-dev-server-viewer

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml  validate.yml
docs/: BUILDING.md
src/: App.css  App.tsx  format.test.ts  format.ts  services.test.ts  services.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
